# edgentities

./: .gitignore  README.md  build.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
kernel/: Cargo.toml
kernel/src/: dedupe.rs  lib.rs  normalizer.rs  parser.rs  presets.rs  prompts.rs
prd/: PRD.md
src/: auth.ts  errors.ts  extractor.ts  index.ts  kernel.ts  types.ts  validate.ts
src/providers/: anthropic.ts  gemini.ts  index.ts  openai.ts  retry.ts
